# deep_research_agent

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  __init__.py  pyproject.toml  requirements.txt
agents/: __init__.py  agent.py  budget_middleware.py  mcp_client.py  patched_deepseek.py  persona_middleware.py  prompts.py  skills_catalog.py  tools.py
agents/citation/: __init__.py  citation_middleware.py  structure_validator.py
agents/deep_agent/: __init__.py  deep_agent.py
agents/orchestrator/: composer.py  graph.py  prompts.py  schemas.py  state.py  supervisor.py
agents/utils/: __init__.py  cache_manager.py  tracing.py
agents/worker/: __init__.py  graph.py  nodes.py  prompts.py  schemas.py  state.py  worker.py
benchmarks/: __init__.py  benchmark_case.py  grader.py  runner.py
benchmarks/datasets/: core.json
config/: __init__.py  settings.py  settings.yaml
docker/: docker-compose.yml
docker/searxng/: settings.yml
docs/: context_caching_design.md  fix_implicit_finish.md  orchestrator_design.md  parallel_execution_design.md  research_handbook.md  resource_limits_changelog.md  worker_design.md
examples/: interactive_research.py  run_benchmark.py  run_deep_agent.py  run_worker.py  search_quality_report.py  verify_orchestrator.py  verify_parallel_orchestrator.py  verify_skills_discovery.py
personas/: __init__.py  registry.py  registry.yaml
personas/frameworks/: guodegang.md  maoxuan.md  saul_goodman.md
refactory_doc/: deep_research_agent_iteration_roadmap.md  gap_analysis.md
refactory_doc/citation/: 01_worker_output_design.md  02_citation_annotation_design.md  03_citation_validation_design.md  04_source_retention_design.md  citation_system_design.md
refactory_doc/persona_skills/: 01_background_and_research.md  02_architecture_design.md  03_implementation_details.md  04_risks_and_mitigations.md  05_verification_and_roadmap.md  README.md
refactory_doc/search_tools/: 01_data_models_and_config.md  (+26 more)
search_service/: __init__.py  __main__.py  cache.py  config.py  exceptions.py  models.py  rate_limiter.py  server.py
tests/: conftest.py  test_agent.py  test_budget_middleware.py  test_grader.py  test_parallel_delegation.py  test_patched_deepseek.py  test_skills_discovery.py  test_tools.py
tools/: __init__.py  control.py  delegation.py  filesystem.py  planning.py  registry.py  tavily.py
(+36 files in other folders)
