[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-research-agent"
version = "0.1.0"
description = "A multi-agent research system that autonomously conducts deep web research using a Supervisor-Worker architecture built on LangGraph."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.0.0",
    "httpx>=0.27.0",
    "langgraph>=1.0.0",
    "python-dotenv>=1.0.0",
    "langsmith>=0.7.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
]

# Package is the project root (no nested deep_research_agent/deep_research_agent/)
[tool.setuptools.package-dir]
"deep_research_agent" = "."

[tool.setuptools.packages]
packages = ["deep_research_agent", "deep_research_agent.config", "deep_research_agent.agents", "deep_research_agent.agents.worker", "deep_research_agent.agents.orchestrator", "deep_research_agent.agents.utils", "deep_research_agent.tools"]

[tool.setuptools.package-data]
deep_research_agent.config = ["settings.yaml"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
pythonpath = ["..", "."]
